Prevent scrollbar from shifting the contact page

--- a/styles/site.css
+++ b/styles/site.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 body {
   margin: 0px;
   font-family: 'Sanchez', serif;
@@ -14,9 +18,6 @@ body {
   color: white;
   margin:30px;
 }
-
-
-
 
 /* Top Section */
 header {
